--- a/test/Stack/pom.xml
+++ b/test/Stack/pom.xml
@@ -23,7 +23,7 @@
     <dependency>
       <groupId>org.jacoco</groupId>
       <artifactId>jacoco-maven-plugin</artifactId>
-      <version>0.7.7.201606060606</version>
+      <version>0.8.4</version>
     </dependency>
     <!-- PITEST -->
     <dependency>
@@ -33,14 +33,6 @@
     </dependency>
 
   </dependencies>
-
-
-
-
-
-
-
-
   <build>
 
 <pluginManagement>
@@ -50,21 +42,18 @@
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.0</version>
         <configuration>
-          <source>1.5</source>
-          <target>1.5</target>
+          <source>1.7</source>
+          <target>1.7</target>
         </configuration>
       </plugin>
     </plugins>
 </pluginManagement>
-
-
-
     <plugins>
 
 	<plugin>
    		<groupId>org.apache.maven.plugins</groupId>
    		<artifactId>maven-surefire-plugin</artifactId>
-   		<version>2.12.4</version>
+   		<version>3.0.0-M3</version>
    		<configuration>
       			<argLine>${surefireArgLine}</argLine>      <!-- This is required for code coverage to work. -->
    		</configuration>
@@ -78,7 +67,7 @@
 	<plugin>
    		<groupId>org.jacoco</groupId>
    		<artifactId>jacoco-maven-plugin</artifactId>
-   		<version>0.7.7.201606060606</version>
+   		<version>0.8.4</version>
    		<executions>
       			<execution>
          			<id>pre-unit-test</id>
