New component for SaveResult Property

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -50,19 +50,30 @@
 			]
 		},
 		{
-			"type": "node",
-			"request": "launch",
 			"name": "Components Tests",
-			"program": "${workspaceFolder}/node_modules/mocha/bin/_mocha",
+			"type": "extensionHost",
+			"request": "launch",
+			"runtimeExecutable": "${execPath}",
 			"args": [
-				"-u",
-				"tdd",
-				"--timeout",
-				"999999",
-				"--colors",
-				"${workspaceFolder}/components/test"
-			],
-			"internalConsoleOptions": "openOnSessionStart"
-		}
+				"${workspaceFolder}/test/Stack",
+				"--extensionDevelopmentPath=${workspaceFolder}",
+				"--extensionTestsPath=${workspaceFolder}/test/componentsTest"
+			]
+		},
+		// {
+		// 	"type": "node",
+		// 	"request": "launch",
+		// 	"name": "Components Tests",
+		// 	"program": "${workspaceFolder}/node_modules/mocha/bin/_mocha",
+		// 	"args": [
+		// 		"-u",
+		// 		"tdd",
+		// 		"--timeout",
+		// 		"999999",
+		// 		"--colors",
+		// 		"${workspaceFolder}/components/test"
+		// 	],
+		// 	"internalConsoleOptions": "openOnSessionStart"
+		// }		
 	]
 }
