Refactor of properties

--- a/package.json
+++ b/package.json
@@ -24,12 +24,12 @@
 			"type": "object",
 			"title": "Pitest Configuration",
 			"properties": {
-				"saveResult.outPutFile": {
+				"saveResult.value": {
 					"type": ["string", "null"],
 					"default": null,
 					"description": "Specifies the file path where the output will be saved."
 				},
-				"mavenExecution.customDirectory": {
+				"mavenExecution.value": {
 					"type": ["string", "null"],
 					"default": null,
 					"description": "Specifies the maven directory, if is empty try to use MAVEN_HOME."
