--- a/package.json
+++ b/package.json
@@ -25,19 +25,22 @@
 			"title": "Pitest Configuration",
 			"properties": {
 				"saveResult.value": {
-					"type": ["string", "null"],
+					"type": "string",
 					"default": null,
-					"description": "Specifies the file path where the output will be saved."
+					"description": "Specifies the file path where the output will be saved as a content in a text file.",
+					"scope": "resource"
 				},
 				"mavenExecution.value": {
-					"type": ["string", "null"],
+					"type": "string",
 					"default": null,
-					"description": "Specifies the maven directory, if is empty try to use MAVEN_HOME."
+					"description": "Specifies the maven directory, if is empty will use MAVEN_HOME.",
+					"scope": "resource"
 				},
 				"withHistory.value": {
-					"type": ["boolean"],
+					"type": "boolean",
 					"default": false,
-					"description": "To speed-up repeated analysis of the same codebase set the withHistory parameter to true."
+					"description": "To speed-up repeated analysis of the same codebase set the withHistory parameter to true.",
+					"scope": "resource"
 				}
 			}
 		}
