--- a/package.json
+++ b/package.json
@@ -27,17 +27,17 @@
 				"saveResult.value": {
 					"type": "string",
 					"default": null,
-					"description": "Specifies the file path where the output will be saved as a content in a text file.",
+					"description": "Specifies the file path where the output will be saved."
 				},
 				"mavenExecution.value": {
 					"type": "string",
 					"default": null,
-					"description": "Specifies the maven directory, if is empty will use MAVEN_HOME.",
+					"description": "Specifies the maven directory, if is empty try to use MAVEN_HOME."
 				},
 				"withHistory.value": {
 					"type": "boolean",
 					"default": false,
-					"description": "To speed-up repeated analysis of the same codebase set the withHistory parameter to true.",
+					"description": "To speed-up repeated analysis of the same codebase set the withHistory parameter to true."
 				}
 			}
 		}
