--- a/test/Stack/pom.xml
+++ b/test/Stack/pom.xml
@@ -113,6 +113,16 @@
         		</targetTests>
 		</configuration>
 	</plugin>
+
+	<plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-scm-plugin</artifactId>
+        <version>1.11.2</version>
+        <configuration>
+          <connectionType>connection</connectionType>
+        </configuration>
+      </plugin>
+
     </plugins>
   </build>
 
