tomeoutConstant property added

--- a/package.json
+++ b/package.json
@@ -90,6 +90,11 @@
 					],
 					"default": [],
 					"description": "List of mutation operators to apply."
+				},
+				"timeoutConstant.value": {
+					"type": "integer",
+					"default": 4000,
+					"description": "Constant amount of additional time to allow a test to run for (after the application of the timeoutFactor) before considering it to be stuck in an infinite loop."
 				}
 			}
 		}
